# prova

./: CMakeLists.txt  arrow.cpp  arrow.h  handleitem.cpp  handleitem.h  l4_data.cpp  l4_data.h  main.cpp  movablebutton.cpp  movablebutton.h  port.h  portselect.cpp  portselect.h  portselect.ui  provaGui.cpp  provaGui.h  provaGui.kdev4  provaGui.pro  prova_scena.cpp  prova_scena.h  prova_scena.ui  prova_widget.cpp  prova_widget.h  prova_widget.ui  prova_widget_2.cpp  prova_widget_2.h  prova_widget_2.ui  provapopup.cpp  provapopup.h  provapopup.ui  provaporte.cpp  provaporte.h  provaporte.ui  provariquadro.cpp  provariquadro.h  scene.cpp  scene.h  test.cpp  test.h  test.ui
